test/error/lib.cpp
#include <cstdlib>

extern "C" void err(int);

void err(int code){
  exit(code);
}
